# labauto_ros

equipment_control/conveyor_control/: CMakeLists.txt  README.md  package.xml
equipment_control/conveyor_control/launch/: conveyor_startup.launch
equipment_control/conveyor_control/sketchbook/: conveyor_belt
equipment_control/press_machine_IMC/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
equipment_control/press_machine_IMC/config/: bridge_config_coldpress.yaml  bridge_config_cutter.yaml  bridge_config_heatpress.yaml  device.yaml
equipment_control/press_machine_IMC/euslisp/: cp-operation-util.l  hp-operation-util.l
equipment_control/press_machine_IMC/launch/: coldpress_operator.launch  cutter_operator.launch  heatpress_operator.launch  plc_ros_bridge_coldpress.launch  plc_ros_bridge_cutter.launch  plc_ros_bridge_heatpress.launch  press_machine_control_all.launch  press_machine_control_all_mock.launch
equipment_control/press_machine_IMC/scripts/: coldpress_operator_node.py  cutter_operator_node.py  heatpress_operator_node.py  press_machine_operator_mock_node.py
equipment_control/press_machine_IMC/src/press_machine_IMC/: coldpress_operator.py  cutter_operator.py  heatpress_operator.py  press_machine_operator.py  press_machine_operator_mock.py
