<package format="2">
  <name>conveyor_control</name>
  <version>0.1.0</version>
  <description> for conveyor belt </description>

  <maintainer email="yuki.asano3206@gmail.com">Yuki Asano</maintainer>
  <author email="yuki.asano3206@gmail.com">Yuki Asano</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rosserial</depend>
  <depend>rosserial_arduino</depend>
  <depend>rosserial_python</depend>

</package>
