<package format="2">
  <name>press_machine_IMC</name>
  <version>0.1.0</version>
  <description> press machine control </description>

  <maintainer email="yuki.asano3206@gmail.com">Yuki Asano</maintainer>
  <author email="yuki.asano3206@gmail.com">Yuki Asano</author>

  <license>BSD 2-clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>plc_ros_bridge</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
